# sample_degradation

./: .gitignore  .gitremotes  .pre-commit-config.yaml  CONTRIBUTING.rst  Pipfile  README.rst  pyproject.toml  requirements.txt  setup.cfg  switcher.json
.devcontainer/: Dockerfile  devcontainer.json
.github/: CONTRIBUTING.rst  dependabot.yml
.github/workflows/: code.yml  docs.yml  linkcheck.yml
docs/: conf.py  reference.rst
docs/developer/how-to/: make-release.rst  update-tools.rst
docs/developer/tutorials/: dev-install.rst
docs/explanations/: why-is-something-so.rst
docs/how-to/: accomplish-a-task.rst
docs/reference/: api.rst
docs/tutorials/: installation.rst
docs/user/reference/: api.rst
garryod-update-skeleton/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
garryod-update-skeleton/.doctrees/: environment.pickle
garryod-update-skeleton/.doctrees/developer/how-to/: build-docs.doctree  lint.doctree  run-tests.doctree  update-tools.doctree
garryod-update-skeleton/.doctrees/developer/reference/: standards.doctree
garryod-update-skeleton/.doctrees/user/: index.doctree
garryod-update-skeleton/.doctrees/user/explanations/: docs-structure.doctree
garryod-update-skeleton/.doctrees/user/reference/: api.doctree
garryod-update-skeleton/_sources/: index.rst.txt
garryod-update-skeleton/_sources/user/how-to/: run-container.rst.txt
garryod-update-skeleton/_static/: documentation_options.js
garryod-update-skeleton/developer/: index.html
garryod-update-skeleton/developer/explanations/: decisions.html
garryod-update-skeleton/developer/explanations/decisions/: 0001-record-architecture-decisions.html
garryod-update-skeleton/developer/how-to/: build-docs.html  contribute.html  lint.html  make-release.html  run-tests.html  static-analysis.html  update-tools.html
garryod-update-skeleton/developer/reference/: standards.html
garryod-update-skeleton/developer/tutorials/: dev-install.html
garryod-update-skeleton/user/: index.html
garryod-update-skeleton/user/explanations/: docs-structure.html
garryod-update-skeleton/user/how-to/: run-container.html
garryod-update-skeleton/user/reference/: api.html
garryod-update-skeleton/user/tutorials/: installation.html
master/: .buildinfo  explanations.html  genindex.html  how-to.html  index.html  objects.inv  py-modindex.html  reference.html  search.html  searchindex.js  tutorials.html
master/.doctrees/: environment.pickle  explanations.doctree  genindex.doctree  how-to.doctree  index.doctree  reference.doctree  tutorials.doctree
master/.doctrees/developer/: index.doctree
master/.doctrees/developer/explanations/: decisions.doctree
master/.doctrees/developer/explanations/decisions/: 0001-record-architecture-decisions.doctree
master/.doctrees/developer/how-to/: contribute.doctree  make-release.doctree  static-analysis.doctree
master/.doctrees/developer/tutorials/: dev-install.doctree
master/.doctrees/reference/: api.doctree  contributing.doctree
master/.doctrees/tutorials/: installation.doctree
master/.doctrees/user/how-to/: run-container.doctree
master/.doctrees/user/tutorials/: installation.doctree
master/_sources/: reference.rst.txt
master/_sources/reference/: api.rst.txt
master/_sources/tutorials/: installation.rst.txt
master/_sources/user/tutorials/: installation.rst.txt
master/_static/: documentation_options.js
master/developer/: index.html
master/developer/explanations/: decisions.html
master/developer/explanations/decisions/: 0001-record-architecture-decisions.html
master/developer/how-to/: build-docs.html  contribute.html  lint.html  make-release.html  run-tests.html  static-analysis.html  update-tools.html
master/developer/reference/: standards.html
master/developer/tutorials/: dev-install.html
master/reference/: api.html  contributing.html
master/tutorials/: installation.html
master/user/: index.html
master/user/explanations/: docs-structure.html
master/user/how-to/: run-container.html
master/user/reference/: api.html
master/user/tutorials/: installation.html
notebooks/: autoprocess.ipynb  diff_ema hist.ipynb  diff_ema.ipynb  diff_hist.ipynb
notebooks/utils/: dataset_visualization.ipynb  find_data.ipynb
src/degradation_eda/: __main__.py  hello.py
src/degradation_eda/processing_stages/: __init__.py  angular_efficiency.py  azimuthal_integration.py  background_subtraction.py  common.py  dark_current.py  deadtime.py  displaced_volume.py  flatfield.py  flux_and_transmission.py  frame_average.py  frame_time.py  masking.py  polarization.py  reading.py  self_absorbtion.py  solid_angle.py  thickness.py  uncertainties.py
src/degradation_eda/utils/: visualization.py
src/sample_degradation/: __init__.py  __main__.py  cli.py  reading.py
src/sample_degradation/learning/: detector_frames_dataset.py
src/sample_degradation/processing_stages/: angular_efficiency.py  azimuthal_integration.py  background_subtraction.py  dark_current.py  deadtime.py  displaced_volume.py  flatfield.py  flux_and_transmission.py  frame_average.py  frame_time.py  polarization.py  reading.py  self_absorbtion.py  solid_angle.py  thickness.py  uncertainties.py
src/sample_degradation/utils/: get_background.py  hdf5_filters.py  uncertain_maths.py  visualization.py
tests/: test_boilerplate_removed.py  test_degradation_eda.py
