[metadata]
name = degradation_eda
description = Exploratory data analysis for quantifying sample degradation
url = https://github.com/garryod/degradation_eda
author = Garry O'Donnell
author_email = garry.o'donnell@diamond.ac.uk
license = Apache License 2.0
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.9
packages = find:
# =src is interpreted as {"": "src"}
# as per recommendation here https://hynek.me/articles/testing-packaging/
package_dir =
    =src
    
# Specify any package dependencies below.
install_requires =
    click
    ipykernel
    nexusformat
    hdf5plugin
    numpy
    plotly
    pandas
    nbformat
    kaleido

[options.extras_require]
# For development tests/docs
dev =
    black==22.3.0
    isort>5.0
    pytest-cov
    mypy
    flake8-isort
    sphinx-rtd-theme-github-versions
    pre-commit
    pydocstyle

[options.packages.find]
where = src

# Specify any package data to be included in the wheel below.
# [options.package_data]
# degradation_eda =
#     subpackage/*.yaml

[options.entry_points]
# Include a command line script
console_scripts =
    degradation_eda = degradation_eda.__main__:main

[mypy]
# Ignore missing stubs for modules we use
ignore_missing_imports = True
# plugins =
#     numpy.typing.mypy_plugin

[isort]
profile=black
float_to_top=true

[flake8]
# Make flake8 respect black's line length (default 88),
max-line-length = 88
extend-ignore =
    E203,  # See https://github.com/PyCQA/pycodestyle/issues/373
    F811,  # support typing.overload decorator

[pydocstyle]
# Make pydocstyle use google docstring format
convention = google
add-ignore =
    D100, # Ignore missing docstrings in public modules
    D104, # Ignore missing docstrings in public packages
    D105, # Ignore missing docstrings in dunder methods
    D107, # Ignore missing docstrings in __init__ methods
    D418, # Ignore missing docstrings in dunder methods; See: https://github.com/PyCQA/pydocstyle/issues/525

[tool:pytest]
# Run pytest with all our checkers, and don't spam us with massive tracebacks on error
addopts =
    --tb=native -vv --doctest-modules --doctest-glob="*.rst"
    --cov=degradation_eda --cov-report term --cov-report xml:cov.xml
# https://iscinumpy.gitlab.io/post/bound-version-constraints/#watch-for-warnings
filterwarnings = error
# Doctest python code in docs, python code in src docstrings, test functions in tests
testpaths =
    docs src tests

[coverage:run]
# This is covered in the versiongit test suite so exclude it here
omit = */_version_git.py
data_file = /tmp/degradation_eda.coverage

[coverage:paths]
# Tests are run from installed location, map back to the src directory
source =
    src
    **/site-packages/
